[package]
name = "webout"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
actix = "0.9.0"
awc = { version = "1.0.1", features = ["rustls"] }
actix-codec = "0.2.0"
futures = "0.3.5"
bytes = "0.5.6"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
tokio = { version = "0.2.22", features = ["process"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
rustls = "0.16"
webpki-roots = "0.19.0"
