[package]
name = "webout"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Stream a terminal session"
repository = "https://github.com/bansco/webout"
license = "MIT"
homepage = "https://github.com/bansco/webout"
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.57"
actix = "0.10.0"
awc = { version = "1.0.1", features = ["rustls"] }
actix-codec = "0.2.0"
futures = "0.3.5"
bytes = "0.5.6"
actix-rt = "1.1.1"
tokio = { version = "0.2.22", features = ["process"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
rustls = "0.16"
webpki-roots = "0.19.0"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
